<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/box_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/WhiteBox"
            android:text="@string/box_one_text"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginLeft="@dimen/margin_wide"
            android:layout_marginRight="@dimen/margin_wide"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            style="@style/WhiteBox"
            android:text="@string/box_two_text"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_one"/>
    <TextView
            android:text="@string/box_three_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three" style="@style/WhiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_four"
            app:layout_constraintTop_toTopOf="@+id/box_two"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_wide"
            app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="@dimen/margin_wide"/>
    <TextView
            android:text="@string/box_four_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four"
            style="@style/WhiteBox"
            app:layout_constraintTop_toBottomOf="@+id/box_three"
            app:layout_constraintBottom_toTopOf="@+id/box_five"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_wide"
            app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"/>
    <TextView
            android:id="@+id/box_five"
            android:text="@string/box_five_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/WhiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/box_two"
            app:layout_constraintTop_toBottomOf="@+id/box_four"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_wide"
            app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="@dimen/margin_wide"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/how_to_play"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_text"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/tap_on_view_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/info_text"
            app:layout_constraintTop_toBottomOf="@+id/box_five"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/how_to_play"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/yellow_button"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/btn_red_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/green_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/green_button"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    <Button
            android:text="@string/btn_green_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_button"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/red_button"
            app:layout_constraintTop_toBottomOf="@+id/info_text"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    <Button
            android:text="@string/btn_yellow_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/green_button"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/green_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" android:textStyle="normal"/>

</androidx.constraintlayout.widget.ConstraintLayout>